<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright 2014 Fernando Rincon Martin <frm.rincon@gmail.com>

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>org.openeos.modules</artifactId>
	<packaging>pom</packaging>

	<parent>
		<groupId>org.openeos</groupId>
		<artifactId>org.openeos.parent</artifactId>
		<version>0.0.1-SNAPSHOT</version>
		<relativePath>../pom.xml</relativePath>
	</parent>


	<modules>
		<module>org.openeos.config.log4j</module>
		<module>org.openeos.ds.postgresql</module>
		<module>org.openeos.ds.derby</module>
		<module>org.openeos.data.masterdata</module>
		<module>org.openeos.data.sampledata</module>
		<module>org.openeos.erp.core</module>
		<module>org.openeos.hibernate</module>
		<module>org.openeos.erp.audit</module>
		<module>org.openeos.vaadin.main</module>
		<module>org.openeos.services.ui</module>
		<module>org.openeos.services.ui.vaadin</module>
		<module>org.openeos.services.dictionary</module>
		<module>org.openeos.liquibase.extender</module>
		<module>org.openeos.erp.core.ui</module>
		<module>org.openeos.erp.audit.ui</module>
<!--		<module>org.openeos.lanterna</module> -->
		<module>org.openeos.jbpm.integration</module>
		<module>org.openeos.dao</module>
		<module>org.openeos.dao.hibernate</module>
		<module>org.openeos.numeration</module>
		<module>org.openeos.numeration.freemarker</module>
		<module>org.openeos.test</module>
		<module>org.openeos.logging</module>
		<module>org.openeos.erp.sales</module>
		<module>org.openeos.extender.ui</module>
		<module>org.openeos.erp.document</module>
		<module>org.openeos.numeration.ui</module>
		<module>org.openeos.vaadin.security</module>
		<module>org.openeos.services.security</module>
		<module>org.openeos.usertask</module>
		<module>org.openeos.aspectj.config</module>
		<module>org.openeos.utils</module>
		<module>org.openeos.wf</module>
		<module>org.openeos.wf.jbpm</module>
		<module>org.openeos.reporting</module>
		<module>org.openeos.reporting.jasperreports</module>
		<module>org.openeos.reporting.entity</module>
		<module>org.openeos.reporting.jasperreports.entity</module>
		<module>org.openeos.services.document</module>
		<module>org.openeos.attachments</module>
		<module>org.openeos.usertask.wf.jbpm</module>
		<module>org.openeos.usertask.ui</module>
		<module>org.openeos.erp.acct</module>
    <module>org.openeos.erp.sales.ui</module>
    <module>org.openeos.erp.document.ui</module>
  </modules>

	<properties>
		<artifactIdRelativeFolder>${project.artifactId}</artifactIdRelativeFolder>
	</properties>

	<build>
		<pluginManagement>

			<plugins>
				<plugin>
					<groupId>org.openeos.tools</groupId>
					<artifactId>generate-entities-maven-plugin</artifactId>
					<version>${project.version}</version>
					<configuration>
						<driver>org.apache.derby.jdbc.EmbeddedDriver</driver>
						<url>jdbc:derby:${project.build.directory}/sampleDB;create=true</url>
						<searchpath>OSGI-INF/liquibase/*.xml</searchpath>
						<generatedSourcesDirectory>src/main/java</generatedSourcesDirectory>
						<jdbcConfigurationConfigurationFile>src/main/resources/hibernate.cfg.xml</jdbcConfigurationConfigurationFile>
						<jdbcConfigurationPackageName>${pom.artifactId}.model</jdbcConfigurationPackageName>
						<jdbcConfigurationRevengFile>src/main/resources/hibernate.reveng.xml</jdbcConfigurationRevengFile>
						<jdbcConfigurationReverseStrategy>org.openeos.tools.hibernate.hbm2java.UnoReverseEngineeringStrategy</jdbcConfigurationReverseStrategy>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>generate-entities</goal>
							</goals>
							<phase>none</phase>
						</execution>
					</executions>
					<dependencies>
						<dependency>
							<groupId>org.apache.derby</groupId>
							<artifactId>derby</artifactId>
							<version>10.9.1.0</version>
						</dependency>
						<dependency>
							<groupId>org.openeos.tools</groupId>
							<artifactId>org.openeos.tools.hibernate.hbm2java</artifactId>
							<version>0.0.1-SNAPSHOT</version>
						</dependency>
						<dependency>
							<groupId>org.hibernate</groupId>
							<artifactId>hibernate-core</artifactId>
							<version>4.0.0.Final</version>
						</dependency>
						<dependency>
							<groupId>org.slf4j</groupId>
							<artifactId>slf4j-api</artifactId>
							<version>1.6.6</version>
						</dependency>
						<dependency>
							<groupId>cglib</groupId>
							<artifactId>cglib</artifactId>
							<version>2.2.2</version>
						</dependency>

					</dependencies>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<systemPropertyVariables>
							<coverage.command>${coverage.command}</coverage.command>
							<test.loglevel>${env.OPENEOS_TEST_LOGLEVEL}</test.loglevel>
						</systemPropertyVariables>
						<argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
					</configuration>
				</plugin>
            <!--This plugin's configuration is used to store Eclipse 
                m2e settings only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.codehaus.mojo</groupId>
										<artifactId>aspectj-maven-plugin</artifactId>
										<versionRange>[1.0,)</versionRange>
										<goals>
											<goal>test-compile</goal>
											<goal>compile</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore/>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.felix</groupId>
										<artifactId>maven-bundle-plugin</artifactId>
										<versionRange>[1.0,)</versionRange>
										<goals>
											<goal>manifest</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<execute/>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-dependency-plugin</artifactId>
										<versionRange>[2.1,)</versionRange>
										<goals>
											<goal>copy-dependencies</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<execute/>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.servicemix.tooling</groupId>
										<artifactId>depends-maven-plugin</artifactId>
										<versionRange>[1.2,)</versionRange>
										<goals>
											<goal>generate-depends-file</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<execute/>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.codehaus.mojo</groupId>
										<artifactId>build-helper-maven-plugin</artifactId>
										<versionRange>[1.7,)</versionRange>
										<goals>
											<goal>regex-property</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore/>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.codehaus.gmaven</groupId>
										<artifactId>gmaven-plugin</artifactId>
										<versionRange>[1.4,)</versionRange>
										<goals>
											<goal>execute</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore/>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.jacoco</groupId>
										<artifactId>jacoco-maven-plugin</artifactId>
										<versionRange>[0.6.2.201302030002,)</versionRange>
										<goals>
											<goal>prepare-agent</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore/>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>aspectj-maven-plugin</artifactId>
					<version>1.5</version>
					<configuration>
						<verbose>true</verbose>
						<complianceLevel>1.7</complianceLevel>
						<showWeaveInfo>true</showWeaveInfo>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>compile</goal>
								<goal>test-compile</goal>
							</goals>
						</execution>
					</executions>
					<dependencies>
						<dependency>
							<groupId>org.aspectj</groupId>
							<artifactId>aspectjrt</artifactId>
							<version>${aspectj.version}</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<failOnError>false</failOnError>
					</configuration>
				</plugin>


				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<configuration>
						<filesets>
							<fileset>
								<directory>${basedir}</directory>
								<includes>
									<include>META-INF/</include>
									<include>OSGI-INF/</include>
									<include>lib/</include>
								</includes>
								<followSymlinks>false</followSymlinks>
							</fileset>
						</filesets>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<executions>
						<execution>
							<id>copy-resources-for-eclipse</id>
							<phase>process-resources</phase>
							<goals>
								<goal>copy-resources</goal>
							</goals>
							<configuration>
								<outputDirectory>.</outputDirectory>
								<resources>
									<resource>
										<directory>src/main/resources</directory>
										<filtering>true</filtering>
										<includes>
											<include>OSGI-INF/**/*</include>
											<include>META-INF/**/*</include>
										</includes>
									</resource>
								</resources>
							</configuration>
						</execution>
						<execution>
							<id>copy-resources-for-test</id>
							<phase>process-classes</phase>
							<goals>
								<goal>copy-resources</goal>
							</goals>
							<configuration>
								<outputDirectory>${basedir}/target/classes/META-INF</outputDirectory>
								<resources>
									<resource>
										<directory>META-INF</directory>
									</resource>
								</resources>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.felix</groupId>
					<artifactId>maven-bundle-plugin</artifactId>
					<extensions>true</extensions>
					<configuration>
						<manifestLocation>META-INF</manifestLocation>
						<instructions>
							<_removeheaders>Import-Service,Export-Service</_removeheaders>
							<_plugin>org.apache.felix.bundleplugin.BlueprintPlugin,aQute.lib.spring.SpringXMLType,org.openeos.tools.bndplugin.UnoBndPlugin</_plugin>
						</instructions>
					</configuration>
					<executions>
						<execution>
							<id>generate-manifest</id>
							<phase>process-classes</phase>
							<goals>
								<goal>manifest</goal>
							</goals>
						</execution>
					</executions>
					<dependencies>
						<dependency>
							<groupId>org.openeos.tools</groupId>
							<artifactId>org.openeos.tools.bndplugin</artifactId>
							<version>0.0.1-SNAPSHOT</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.6.5.201403032054</version>
					<executions>
						<execution>
							<id>prepare-agent</id>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
							<configuration>
								<propertyName>coverage.command</propertyName>
							</configuration>
						</execution>
						<execution>
							<id>report</id>
							<phase>post-integration-test</phase>
							<goals>
								<goal>report</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

			</plugins>
		</pluginManagement>

		<plugins>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>aspectj-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.servicemix.tooling</groupId>
				<artifactId>depends-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>generate-depends-file</id>
						<phase>test-compile</phase>
						<goals>
							<goal>generate-depends-file</goal>
						</goals>
					</execution>
				</executions>
			</plugin>


		</plugins>

	</build>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.osgi</groupId>
				<artifactId>org.osgi.core</artifactId>
				<version>${osgi.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>commons-collections</groupId>
				<artifactId>commons-collections</artifactId>
				<version>${apache.commons.collections.version}</version>
			</dependency>

			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.10</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-all</artifactId>
				<version>1.9.5-rc1</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.aspectj</groupId>
				<artifactId>aspectjrt</artifactId>
				<version>${aspectj.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-core</artifactId>
				<version>${org.springframework.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.sshd</groupId>
				<artifactId>sshd-core</artifactId>
				<version>${sshd.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-core</artifactId>
				<version>${spring.security.version}</version>
				<scope>provided</scope>
				<exclusions>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-aop</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-context</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-core</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-beans</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-expression</artifactId>
					</exclusion>
					<exclusion>
						<groupId>aopalliance</groupId>
						<artifactId>aopalliance</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-web</artifactId>
				<version>${spring.security.version}</version>
				<scope>provided</scope>
				<exclusions>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-jdbc</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-aop</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-web</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-tx</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-context</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-core</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-beans</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-expression</artifactId>
					</exclusion>
					<exclusion>
						<groupId>aopalliance</groupId>
						<artifactId>aopalliance</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-config</artifactId>
				<version>${spring.security.version}</version>
				<scope>provided</scope>
				<exclusions>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-aop</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-context</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-core</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-beans</artifactId>
					</exclusion>
					<exclusion>
						<groupId>aopalliance</groupId>
						<artifactId>aopalliance</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>net.sf.jasperreports</groupId>
				<artifactId>jasperreports</artifactId>
				<version>${jasperreports.version}</version>
				<scope>provided</scope>
				<exclusions>
					<exclusion>
						<groupId>commons-logging</groupId>
						<artifactId>commons-logging</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjrt</artifactId>
			<version>${aspectj.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.openeos.tools</groupId>
			<artifactId>org.openeos.tools.bndplugin</artifactId>
			<version>0.0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>

	</dependencies>

</project>
